fixed slider width issue on mobiles, and padding on info text

--- a/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
+++ b/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
@@ -205,7 +205,7 @@ padding-left:5px;
 
 // sliders
 .slider-container {
-  width: 400px;
+  width: 300px;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
@@ -301,6 +301,7 @@ padding-left:5px;
   background-color: #f8f8f8;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px;
 }
 
 .cart-item-info{
